# rust-svelte-setup

./: .env.example  ARCHITECTURE.md  README.md  buf.gen.yaml  buf.yaml  justfile
.github/workflows/: ci-services.yml
app/: .gitignore  docker-compose.yml  justfile  package-lock.json  package.json
app/src/lib/: errors.ts  service.ts
app/src/lib/auth/: service.ts
app/src/lib/components/: LoadingSpinner.svelte
app/src/lib/protos/auth/: api.ts
app/src/lib/protos/auth/proto/: ApiService.ts  CreateSessionReq.ts  CreateSessionResp.ts  DeleteSessionReq.ts  DeleteSessionResp.ts  GetOauthAccountReq.ts  GetOauthAccountResp.ts  HandleGithubCallbackReq.ts  HandleGithubCallbackResp.ts  HandleGoogleCallbackReq.ts  HandleGoogleCallbackResp.ts  HandleOauthCallbackReq.ts  HandleOauthCallbackResp.ts  LinkOauthAccountReq.ts  LinkOauthAccountResp.ts  LinkOauthTokenReq.ts  LinkOauthTokenResp.ts  OauthProvider.ts  Session.ts  StartGithubLoginReq.ts  StartGithubLoginResp.ts  StartGoogleLoginReq.ts  StartGoogleLoginResp.ts  StartOauthLoginReq.ts  StartOauthLoginResp.ts  ValidateSessionReq.ts  ValidateSessionResp.ts
app/src/lib/protos/dummy/: api.ts
app/src/lib/protos/dummy/proto/: ApiService.ts  Entity.ts  GetEntityReq.ts  GetEntityResp.ts
app/src/lib/protos/user/: api.ts
app/src/lib/protos/user/proto/: ApiService.ts  CreateUserReq.ts  CreateUserResp.ts  GetUserIdByGoogleIdReq.ts  GetUserIdByGoogleIdResp.ts  GetUserIdFromGoogleIdReq.ts  GetUserIdFromGoogleIdResp.ts  GetUserIdFromOauthIdReq.ts  GetUserIdFromOauthIdResp.ts  GetUserReq.ts  GetUserResp.ts  ListUsersReq.ts  ListUsersResp.ts  OauthProvider.ts  User.ts
app/src/lib/protos/users/: api.ts
app/src/lib/protos/users/proto/: ApiService.ts  CreateUserReq.ts  (+6 more)
app/src/lib/user/: service.ts
app/src/routes/: +page.svelte  +page.ts
app/src/routes/login/: +page.svelte
backend/users/: Cargo.toml
backend/users/src/: main.rs  proto.rs
infrastructure/db/: docker-compose.yml  init.sql
infrastructure/traefik/: docker-compose.yml
protos/: Cargo.toml  users.proto
protos/rs/src/: main.rs
protos/src/: main.rs
protos/ts/: generate-protos.js  package-lock.json  package.json
scripts/: build-services.sh  build.sh  deploy-services.sh  deploy.sh  undeploy-services.sh  undeploy.sh
scripts/docker-gen/: Cargo.toml
scripts/docker-gen/templates/: Dockerfile.j2
scripts/proto-gen-rs/: Cargo.toml  justfile  proto-gen-rs
scripts/proto-gen-rs/src/: client.rs  main.rs  proto.rs
scripts/proto-gen-ts/: generate-protos.js  package-lock.json  package.json
service-users/: Cargo.toml  justfile
service-users/migrations/: 000001_create-users-table.up.sql
service-users/src/: db.rs  main.rs
services/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  common.just  docker-compose.yml
services/auth/: Cargo.toml  Dockerfile  api.proto
services/auth/migrations/: 000001_create-session-table.up.sql  V1__create_session_table.sql  V1__create_sessions_table.sql  V2__create_oauth_accounts_table.sql
services/auth/src/: auth.rs  client.rs  create_session.rs  db.rs  delete_session.rs  error.rs  fixture.rs  get_oauth_account.rs  handle_oauth_callback.rs  handler.rs  lib.rs  link_oauth_account.rs  main.rs  proto.rs  server.rs  start_oauth_login.rs  utils.rs  validate_session.rs
services/auth/src/oauth/: config.rs  error.rs  github.rs  google.rs  mod.rs  models.rs
services/auth/src/proto/: auth.rs  mod.rs
services/common-utils/: Cargo.toml
services/common-utils/src/: lib.rs
services/common-utils/src/db/: migration.rs
services/common-utils/src/grpc/: mod.rs  serve.rs
services/common-utils/src/http/: middleware.rs
services/common-utils/src/tracing/: mod.rs  request_span.rs  tracer.rs
services/dummy/: Cargo.toml  Dockerfile  api.proto
services/dummy/migrations/: V1__create_entities_table.sql
services/dummy/src/: client.rs  db.rs  error.rs  fixture.rs  get_entity.rs  handler.rs  lib.rs  main.rs  proto.rs  server.rs  utils.rs
services/dummy/src/proto/: dummy.rs  mod.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: error.rs  handler.rs  lib.rs  main.rs  server.rs  service.rs  utils.rs
services/gateway/tests/: auth_test.rs  integration_test.rs
services/gateway/tests/utils/: mod.rs  testcontainers.rs
services/pkg/common/: Cargo.toml
services/pkg/common/src/: lib.rs
services/pkg/database/: Cargo.toml
services/pkg/database/src/: config.rs  connect.rs  lib.rs  migration.rs
services/pkg/helper/: Cargo.toml
services/pkg/helper/src/: date.rs  lib.rs
services/pkg/mock/: Cargo.toml
services/pkg/mock/src/: lib.rs
services/pkg/oauth/: Cargo.toml
services/pkg/oauth/src/: error.rs  lib.rs  models.rs  oauth.rs  random.rs
services/pkg/setup/: Cargo.toml
services/pkg/setup/src/: cookie.rs  db.rs  lib.rs  validate.rs
services/pkg/setup/src/middleware/: auth.rs  tracing.rs
services/pkg/setup/src/tracing/: tracer.rs
services/pkg/test-utils/: Cargo.toml
services/pkg/test-utils/src/: lib.rs
services/pkg/testutils/: Cargo.toml
services/pkg/testutils/src/: lib.rs
services/shared/: Cargo.toml
services/shared/src/: cookie.rs  helper.rs  id.rs  lib.rs  session.rs
services/shared/src/grpc/: interceptors.rs  middleware.rs  mod.rs
services/shared/src/http/: middleware.rs
services/shared/src/middleware/: auth.rs  auth_middleware.rs  mod.rs  tracing.rs
services/shared/src/test_utils/: mod.rs
services/shared/src/tracing/: mod.rs  tracer.rs
services/user/: Cargo.toml  Dockerfile  api.proto  justfile
services/user/migrations/: 000001_create-users-table.up.sql  V1__create_users_table.sql
services/user/src/: client.rs  create_user.rs  db.rs  error.rs  fixture.rs  get_user.rs  handler.rs  lib.rs  main.rs  proto.rs  server.rs  test_utils.rs  utils.rs
services/user/src/proto/: mod.rs  user.rs
services/users/: api.proto  justfile
services/users/src/: handler.rs  main.rs  proto.rs
tools/docker-gen/: docker-gen  justfile
tools/docker-gen/src/: main.rs
tools/proto-gen-rs/src/: client.rs  main.rs  proto.rs  utils.rs
tracing/: docker-compose.yml  otel-collector-config.yaml
(+5 files in other folders)
