[package]
name = "service-users"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "rt", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3"] }
