[package]
name = "service-users"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.0", features = ["rt-multi-thread", "rt", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3"] }
tonic = { version = "0.9", features = ["tls", "tls-roots"] }
uuid = { version = "1", features = ["v4"] }
