[workspace]
members = ["gateway"]
resolver = "2"

[workspace.dependencies]
chrono = "0.4"
deadpool-postgres = "0.14"
dotenv = "0.15"
prost = "0.13"
prost-wkt-types = "0.6"
thiserror = "2.0"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "rt", "macros"]

[workspace.dependencies.tokio-postgres]
version = "0.7"
features = ["with-uuid-1", "with-chrono-0_4"]

[workspace.dependencies.tonic]
version = "0.13"
features = ["tls-native-roots"]

[workspace.dependencies.uuid]
version = "1"
features = ["v4"]
