[workspace]
members = [
    "auth", 
    "gateway",
    "user",
    "shared", 
    "dummy",
]

resolver = "2"

[workspace.dependencies]
# Miscellaneous
chrono = "0.4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
uuid = { version = "1", features = ["v4"] }

# Database
deadpool-postgres = "0.14"
refinery = { version = "0.8", features = ["tokio-postgres"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }

# HTTP
axum = { version = "0.8" }
http = { version = "1.0" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }

# gRPC
prost = { version = "0.14" }
tokio = { version = "1.0", features = ["rt-multi-thread", "rt", "macros"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
tonic-prost = { version = "0.14" }

# Tracing
opentelemetry = { version = "0.30" }
opentelemetry-http = { version = "0.30" }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.31" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
