[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
deadpool-postgres = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tonic = { workspace = true }
tracing = {workspace = true }
uuid = { workspace = true }

base64 = { version = "0.22" }
jsonwebtoken = { version =  "9.3.1" }
rand = { version = "0.9.1", features = ["std_rng"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_urlencoded = { version = "0.7" }
sha2 = { version = "0.10" }
url = { version = "2.5.4" }

shared = { version = "0.1", path = "../shared" }

[dev-dependencies]
shared = { version = "0.1", path = "../shared", features = ["test-utils"] }
