[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
deadpool-postgres = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
refinery = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = {workspace = true }
uuid = { workspace = true }

sha2 = { version = "0.10.5" }

setup = { version = "0.1", path = "../pkg/setup" }
oauth = { version = "0.1", path = "../pkg/oauth" }

[dev-dependencies]
test-utils = { version = "0.1", path = "../pkg/test-utils" }

[features]
default = ["test-utils"]
test-utils = []
