[package]
name = "dummy"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
deadpool-postgres = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
uuid = { workspace = true }
tracing = {workspace = true }

setup = { version = "0.1", path = "../pkg/setup" }
common = { version = "0.1", path = "../pkg/common" }

[dev-dependencies]
rstest = { workspace = true }
testutils = { version = "0.1", path = "../pkg/testutils" }
common = { version = "0.1", path = "../pkg/common", features = ["mock"] }

[features]
default = ["testutils"]
testutils = []
