[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }

axum-macros = { version = "0.5" }
serde_json = { version = "1.0" } 
tower-http = { version = "0.6", features = ["cors"] }

auth = { version = "0.1", path = "../auth" }
user = { version = "0.1", path = "../user" }
shared = { version = "0.1", path = "../shared" }
