[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }

axum-macros = { version = "0.5" }
serde_json = { version = "1.0" } 
tower-http = { version = "0.6", features = ["cors"] }

auth = { version = "0.1", path = "../auth" }
user = { version = "0.1", path = "../user" }
setup = { version = "0.1", path = "../pkg/setup" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
testcontainers = { version = "0.25.0" }
