[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
deadpool-postgres = { workspace = true }
http = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
refinery = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = {workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
