[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
deadpool-postgres = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
uuid = { workspace = true }
tracing = {workspace = true }

setup = { version = "0.1", path = "../pkg/setup" }

[dev-dependencies]
rstest = { workspace = true }

testutils = { version = "0.1", path = "../pkg/testutils" }

[features]
default = ["testutils"]
testutils = []
