[package]
name = "oauth"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tracing = {workspace = true }
uuid = { workspace = true }

base64 = { version = "0.22" }
jsonwebtoken = { version =  "9.3.1" }
rand = { version = "0.9.1" }
serde_urlencoded = { version = "0.7" }
sha2 = { version = "0.10" }
url = { version = "2.5.4" }

[features]
default = []
mock = []
